--- a/assets/library.yml
+++ b/assets/library.yml
@@ -14,3 +14,19 @@ objects:
     width: 45
     height: 45
     style: ''
+  'sig~':
+    maxclass: 'newobj'
+    numinlets: 1
+    numoutlets: 1
+    outlettype:
+      - "signal"
+    style: ""
+    text: "sig~"
+  '*~':
+    maxclass: 'newobj'
+    numinlets: 2
+    numoutlets: 1
+    outlettype:
+      - "signal"
+    style: ""
+    text: "*~"
