--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ language: ruby
 rvm:
   - 2.3.3
 before_install: gem install bundler -v 1.14.6
+script:
+  - bundle exec rake spec
+  - bundle exec cucumber features
